<resources>
    <string name="app_name">KYS</string>
    <!--    Bottom Navigation Strings   -->
    <string name="conf">Konferans</string>
    <string name="create_conf">Yeni Konferans</string>
    <string name="profile">Profilim</string>
    <!--           Home Strings         -->
    <string name="home_welcome">Hoşgeldin</string>
    <!--    Create Conference Strings   -->
    <string name="conference_name">Konferans Adı</string>
    <string name="conference_topic">Konferans Konusu</string>
    <string name="conference_mail">İletişim Mail</string>
    <string name="conference_required">Gerekli</string>
    <string name="conference_date">Konferans Tarihi</string>
    <string name="conference_hour">Konferans Saati</string>
    <string name="conference_duration">Konferans Süresi</string>
    <!--    Conference Duration Times   -->
    <string name="half_an_hour">30 Dakika</string>
    <string name="three_quarter">45 Dakika</string>
    <string name="a_hour">1 Saat</string>
    <string name="a_hour_quarter">1 Saat 15 Dakika</string>
    <string name="a_hour_half">1 Saat 30 Dakika</string>
    <string name="a_hour_three_quarter">1 Saat 45 Dakika</string>
    <string name="two_hour">2 Saat</string>
    <string name="two_hour_quarter">2 Saat 15 Dakika</string>
    <string name="two_hour_half">2 Saat 30 Dakika</string>
    <string name="two_hour_three_quarter">2 Saat 45 Dakika</string>
    <string name="three_hour">3 Saat</string>
    <string name="three_hour_quarter">3 Saat 15 Dakika</string>
    <string name="three_hour_half">3 Saat 30 Dakika</string>
    <string name="three_hour_three_quarter">3 Saat 45 Dakika</string>
    <string name="four_hour">4 Saat</string>
    <string-array name="durations">
        <item>30 Dakika</item>
        <item>45 Dakika</item>
        <item>1 Saat</item>
        <item>1 Saat 15 Dakika</item>
        <item>1 Saat 30 Dakika</item>
        <item>1 Saat 45 Dakika</item>
        <item>2 Saat</item>
        <item>2 Saat 15 Dakika</item>
        <item>2 Saat 30 Dakika</item>
        <item>2 Saat 45 Dakika</item>
        <item>3 Saat</item>
        <item>3 Saat 15 Dakika</item>
        <item>3 Saat 30 Dakika</item>
        <item>3 Saat 45 Dakika</item>
        <item>4 Saat</item>
    </string-array>
    <string name="conference_est_callers">Beklenen Katılımcı Sayısı</string>
    <string name="conference_type_online">Online</string>
    <string name="conference_type_face">Yüz Yüze</string>
    <string name="conference_type_both">Karma</string>
    <string name="conference_type_title">Konferans Tipi</string>
    <string name="conference_address">Adres</string>
    <string name="conference_link">Online Katılım Link</string>
    <string name="conference_send">Gönder</string>
    <string name="conference_delete">Sil</string>
    <!--    LogIn/SignUp Strings    -->
    <string name="login_type_email">Email\'inizi Giriniz</string>
    <string name="login_type_password">Şifrenizi Giriniz</string>
    <string name="login_button">Giriş Yap</string>
    <string name="login_not_registered">Henüz kayıt olmadınız mı? Hemen kayıt olun!</string>
    <string name="signup_type_email">Email\'inizi Giriniz</string>
    <string name="signup_password">Şifrenizi Giriniz</string>
    <string name="signup_retype_password">Şifreyi Tekrar Giriniz</string>
    <string name="signup_button">Kayıt Ol</string>
    <string name="signup_already_registered">Zaten üye misiniz? Hemen giriş yapın!</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <!--    Profile Strings     -->
    <string name="logout_button">Çıkış Yap</string>
    <string name="profile_mail">E-Posta Adresi</string>
    <string name="profile_change_name">İsim Değiştir</string>
    <string name="profile_change_photo">Fotoğrafı Değiştir</string>
    <!--    Edit Profile Dialog     -->
    <string name="profile_edit">Profili Değiştir</string>
    <string name="profile_edit_username">Kullanıcı Adı: </string>
    <string name="profile_edit_photo">Fotoğraf: </string>
    <string name="profile_edit_photo_upload">Yükle</string>
    <string name="profile_edit_update">Güncelle</string>
    <!--    Home Strings        -->
    <string name="home_conferences">Konferanslar</string>
    <string name="home_conf_join">Katıl</string>
    <string name="home_conf_edit">Düzenle</string>
    <string name="home_conf_cancel">İptal Et</string>
    <string name="home_conf_details">Ayrıntılar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_profile">Update Profile</string>

    <string name="temp_images_dir">temp_images</string>
    <string name="temp_image">temp_image.jpg</string>
    <string name="authorities">com.example.fileprovider</string>
</resources>