<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateConfFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            app:navigationIcon="@drawable/ic_close"
            app:title="@string/create_conf"
            app:titleCentered="true"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--            Konferans Adı              -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confNameTextInputLayout"
                style="@style/ThemeOverlay.Material3.TextInputEditText"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:hint="@string/conference_name"
                android:textColorHint="@color/black"
                app:helperText="@string/conference_required"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/blue"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--            Koferans Mail            -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confMailTextInputLayout"
                style="@style/ThemeOverlay.Material3.TextInputEditText"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:hint="@string/conference_mail"
                android:textColorHint="@color/black"
                app:helperText="@string/conference_required"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confMailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:drawableEnd="@drawable/ic_conf_mail"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!--            Konferans Tarih            -->

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>