<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/homeConfCardView"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/homeConfName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="Konferans Adı"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/homeConfTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="Konferans Konusu"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/homeConfDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="Tarih"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/homeConfEditButton"
                        android:layout_width="110dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:text="@string/home_conf_edit"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/homeConfCancelButton"
                        android:layout_width="110dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:text="@string/home_conf_cancel"
                        android:textColor="@color/black"
                        android:textFontWeight="700"
                        android:textSize="13sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/homeConfDetailsButton"
                        android:layout_width="110dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:text="@string/home_conf_details"
                        android:textColor="@color/black"
                        android:textFontWeight="700"
                        android:textSize="13sp" />

                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>