<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/edit_profile_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_edit"
        android:textSize="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_profile_photo_linear_layout"
        android:contentDescription="@string/profile_edit"/>

    <LinearLayout
        android:id="@+id/edit_profile_photo_linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.077"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            tools:srcCompat="@mipmap/ic_profile_photo_foreground" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_profile_upload_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_edit_photo_upload"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_profile_camera_btn"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                app:icon="@drawable/camera"
                app:iconSize="@dimen/_23sdp"
                app:iconGravity="textStart"
                app:iconPadding="0dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_profile_username_linear_layout"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_photo_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/edit_username_ic"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_username"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_profile_username"
            android:layout_width="@dimen/_224sdp"
            android:layout_height="wrap_content"
            android:hint="@string/profile_edit_username"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/edit_profile_update_btn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="@dimen/_25sdp"-->
<!--        android:layout_marginTop="@dimen/_25sdp"-->
<!--        android:text="@string/profile_edit_update"-->
<!--        android:textSize="@dimen/_15ssp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/edit_profile_username_linear_layout"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>